# python-with-tests

./: .pre-commit-config.yaml  LICENSE  README.md  fix_flake8.py  mkdocs.yml  setup-hooks.sh
.github/workflows/: format-code.yml  learningpython-workflow.yml  python-reusable.yml  python-webapp-workflow.yml
learningpython/: .coverage  .flake8  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
learningpython/.github/workflows/: ci.yml
learningpython/org/: __init__.py
learningpython/org/pachnanda/: __init__.py
learningpython/org/pachnanda/learning/: __init__.py  calculator.py  calculator_demo.py
learningpython/org/pachnanda/test/: __init__.py  test_calculator.py
python-webapp/: .gitignore  Dockerfile  Makefile  README.md  clean.sh  docker-compose.test.yaml  docker-compose.yaml  mkdocs.yml  pyproject.toml  pytest.ini  setup.sh  start.sh
python-webapp/.github/workflows/: ci-cd.yml  test-deployment.yml
python-webapp/app/: __init__.py  main.py  pg.py
python-webapp/db/: changelog.xml  changelog.yaml
python-webapp/tests/: __init__.py  test_integration.py  test_main.py
python-with-tests/python-webapp/: Makefile  README.md  clean.sh  docker-compose.yaml  pyproject.toml  pytest.ini  start.sh
python-with-tests/python-webapp/.github/workflows/: ci-cd.yml
python-with-tests/python-webapp/app/: main.py
python-with-tests/python-webapp/db/: changelog.yaml
python-with-tests/python-webapp/tests/: test_integration.py  test_main.py
